--- a/app/index.html
+++ b/app/index.html
@@ -107,6 +107,7 @@
                         </ul>
                     </div>
                     <div class="col-md-10">
+
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="#"><i class="far fa-eye">( H )</i></a></li>
@@ -114,6 +115,196 @@
                                 <li class="breadcrumb-item active" aria-current="page">Личный кабинет бизнес</li>
                             </ol>
                         </nav>
+
+                        <div class="card card-full" style="max-width: 870px;">
+                            <div class="row no-gutters">
+
+                                <div class="col">
+                                    <div class="card-top">
+                                        <img src="images/img.png" class="card-img-top" alt="img" />
+                                        <div class="tags-line">
+                                            <a href="#" class="btn btn-light btn-sm">Ресторан</a>
+                                            <a href="#" class="btn btn-light btn-sm">Кафе</a>
+                                            <a href="#" class="btn btn-light btn-sm">Бар</a>
+                                        </div>
+                                    </div>
+                                    <div class="card-body">
+
+                                        <h5 class="card-title">Чайхона №1</h5>
+
+                                        <ul class="list-unstyled">
+                                            <li class="nav-item">
+                                                <div class="d-flex">
+                                                    <span><i class="far fa-bell mr-2">(i)</i></span>
+                                                    <div>
+                                                        <p>Москва, Округ: ЦАО</p>
+                                                        <p>м. Тверская (170 м) ул. Мясницкая, д.9</p>
+                                                    </div>
+                                                </div>
+                                            </li>
+                                            <li class="nav-item">
+                                                <div class="d-flex">
+                                                    <span><i class="far fa-bell mr-2">(i)</i></span>
+                                                    <div>
+                                                        <span>+7 (495) 432 54 98</span>
+                                                    </div>
+                                                </div>
+                                            </li>
+                                        </ul>
+                                        <div class="small">
+                                            <dl class="row no-gutters justify-content-between">
+                                                <dt class="col-4">пн-пт</dt>
+                                                <dd class="col-8">10:00 — 23:00</dd>
+
+                                                <dt class="col-4">сб </dt>
+                                                <dd class="col-8">10:00 — 23:00</dd>
+
+                                                <dt class="col-4">вс </dt>
+                                                <dd class="col-8">10:00 — 23:00</dd>
+                                            </dl>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col card-right">
+                                    <div class="card-body">
+                                        <div class="row">
+                                            <div class="col-6">
+                                                <dt>Кухня</dt>
+                                                <dd>Узбекская, Русская, Европейская, Японская, Въетнамская, Итальянская, Узбекская, Русская, Европейская, ...</dd>
+                                            </div>
+                                            <div class="col-6">
+                                                <dt>В компании</dt>
+                                                <dd>Только я, друзей, туристов, партнера, дамы, кавалера, родителей, детей, инвалидов, только я, друзей</dd>
+                                            </div>
+                                            <div class="col-6">
+                                                <dt>Развлечения</dt>
+                                                <dd>Караоке, танец живота, настольные игры, кальян, танцпол, dj, караоке, танец, настольные игры</dd>
+                                            </div>
+                                            <div class="col-6">
+                                                <dt>Особенности</dt>
+                                                <dd>Wifi, диванчики, живая музыка, круглосуточно, оплата картой (Visa, Mastercard)</dd>
+                                            </div>
+
+                                            <div class="col-6">
+                                                <table class="table table-sm">
+                                                    <thead>
+                                                        <tr>
+                                                            <th scope="col">Особенности</th>
+                                                            <th></th>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                        <tr>
+                                                            <td>Индекс “Цезаря”</td>
+                                                            <td class="text-right">350</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td>Индекс “Ром колы”</td>
+                                                            <td class="text-right">250</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td>Бизнес-ланч</td>
+                                                            <td class="text-right">190 — 500</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td>Средний счет</td>
+                                                            <td class="text-right">1150 — 1550</td>
+                                                        </tr>
+                                                    </tbody>
+                                                </table>
+                                            </div>
+
+                                            <div class="col-6">
+                                                <table class="table table-sm">
+                                                    <thead>
+                                                        <tr>
+                                                            <th scope="col">Рейтинг</th>
+                                                            <th>
+                                                                <span class="static-rating static-rating-sm">
+                                                                    <i class="fas fa-star voted"></i>
+                                                                    <i class="fas fa-star voted"></i>
+                                                                    <i class="fas fa-star voted"></i>
+                                                                    <i class="fas fa-star voted"></i>
+                                                                    <i class="fas fa-star voted"></i>
+                                                                </span>
+                                                            </th>
+                                                            <th class="text-right">
+                                                                <strong>8/10</span>
+                                                            </th>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                        <tr>
+                                                            <td>Сервис</td>
+                                                            <td>
+                                                                <span class="static-rating static-rating-sm">
+                                                                    <i class="fas fa-star voted"></i>
+                                                                    <i class="fas fa-star voted"></i>
+                                                                    <i class="fas fa-star voted"></i>
+                                                                    <i class="fas fa-star voted"></i>
+                                                                    <i class="fas fa-star voted"></i>
+                                                                </span>
+                                                            </td>
+                                                            <td class="text-right">
+                                                                8/10
+                                                            </td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td>Кухня</td>
+                                                            <td>
+                                                                <span class="static-rating static-rating-sm">
+                                                                    <i class="fas fa-star voted"></i>
+                                                                    <i class="fas fa-star voted"></i>
+                                                                    <i class="fas fa-star voted"></i>
+                                                                    <i class="fas fa-star voted"></i>
+                                                                    <i class="fas fa-star voted"></i>
+                                                                </span>
+                                                            </td>
+                                                            <td class="text-right">
+                                                                8/10
+                                                            </td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td>Интерьер</td>
+                                                            <td>
+                                                                <span class="static-rating static-rating-sm">
+                                                                    <i class="fas fa-star voted"></i>
+                                                                    <i class="fas fa-star voted"></i>
+                                                                    <i class="fas fa-star voted"></i>
+                                                                    <i class="fas fa-star voted"></i>
+                                                                    <i class="fas fa-star voted"></i>
+                                                                </span>
+                                                            </td>
+                                                            <td class="text-right">
+                                                                8/10
+                                                            </td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td>Доверие</td>
+                                                            <td>
+                                                                <span class="static-rating static-rating-sm">
+                                                                    <i class="fas fa-star voted"></i>
+                                                                    <i class="fas fa-star voted"></i>
+                                                                    <i class="fas fa-star voted"></i>
+                                                                    <i class="fas fa-star voted"></i>
+                                                                    <i class="fas fa-star voted"></i>
+                                                                </span>
+                                                            </td>
+                                                            <td class="text-right">
+                                                                10/10
+                                                            </td>
+                                                        </tr>
+                                                    </tbody>
+                                                </table>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
